--- a/Vue3/index.html
+++ b/Vue3/index.html
@@ -11,9 +11,11 @@
 
 <body>
   <div id="app">
-    <p>
-      {{ message }}
-    </p>
+    <h2>TODO List</h2>
+    <form v-on:submit.prevent>
+      <input type="text">
+      <button v-on:click="addItem">Add</button>
+    </form>
   </div>
   <script src="https:unpkg.com/vue@3.1.5"></script>
   <script src="js/script.js"></script>
