--- a/Vue3/index.html
+++ b/Vue3/index.html
@@ -12,8 +12,10 @@
 <body>
   <div id="app">
     <h2>TODO List</h2>
+    <!-- formのsubmitを無効にする -->
     <form v-on:submit.prevent>
       <input type="text">
+      <!-- ボタンクリック時にイベント発生 -->
       <button v-on:click="addItem">Add</button>
     </form>
   </div>
