--- a/Vue3/index.html
+++ b/Vue3/index.html
@@ -14,10 +14,13 @@
     <h2>TODO List</h2>
     <!-- formのsubmitを無効にする -->
     <form v-on:submit.prevent>
-      <input type="text">
+      <!-- プロパティnewItemに双方向データバインディング -->
+      <input type="text" v-model="newItem">
       <!-- ボタンクリック時にイベント発生 -->
       <button v-on:click="addItem">Add</button>
     </form>
+    <!-- 簡易的なデバッグ -->
+    <pre>{{ $data }}</pre>
   </div>
   <script src="https:unpkg.com/vue@3.1.5"></script>
   <script src="js/script.js"></script>
