--- a/Vue3/index.html
+++ b/Vue3/index.html
@@ -12,13 +12,24 @@
 <body>
   <div id="app">
     <h2>TODO List</h2>
+    
     <!-- formのsubmitを無効にする -->
     <form v-on:submit.prevent>
+
       <!-- プロパティnewItemに双方向データバインディング -->
       <input type="text" v-model="newItem">
+
       <!-- ボタンクリック時にイベント発生 -->
       <button v-on:click="addItem">Add</button>
     </form>
+
+    <!-- todosに格納したデータを表示する -->
+    <ul>
+      <li v-for="todo in todos">
+        <span>{{ todo.item }}</span>
+      </li>
+    </ul>
+
     <!-- 簡易的なデバッグ -->
     <pre>{{ $data }}</pre>
   </div>
